--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql-teste-grancurso
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=db_grancursos
+DB_USERNAME=user_grancursos
+DB_PASSWORD=pass_grancursos
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
