--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=mysql-teste-grancurso
+DB_HOST=mysql-teste-grancursos
 DB_PORT=3306
 DB_DATABASE=db_grancursos
 DB_USERNAME=user_grancursos
@@ -44,3 +44,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FAKER_LANGUAGE=pt_BR
