--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,7 +12,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "nwidart/laravel-modules": "^6.0"
+        "nwidart/laravel-modules": "^6.0",
+        "thalfm/laravel-eloquent-filter": "1.*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
@@ -42,7 +43,10 @@
         "psr-4": {
             "App\\": "app/",
             "Modules\\": "Modules/"
-        }
+        },
+        "classmap": [
+            "database/seeds"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
