--- a/backend/composer.json
+++ b/backend/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "nwidart/laravel-modules": "^6.0",
+        "staudenmeir/laravel-cte": "^1.0",
         "thalfm/laravel-eloquent-filter": "1.*"
     },
     "require-dev": {
