--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,7 @@ services:
     #      context: docker
     #      dockerfile: mysql/Dockerfile
     restart: always
+    command: mysqld --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_DATABASE: 'db_grancursos'
       # So you don't have to use root, but you can if you like
@@ -72,12 +73,13 @@ services:
       # You can use whatever password you like
       MYSQL_PASSWORD: 'pass_grancursos'
       # Password for root access
-#      MYSQL_ROOT_PASSWORD: 'pass_grancursos'
+      MYSQL_ROOT_PASSWORD: 'pass_grancursos'
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - "3306:3306"
     volumes:
-      - ./database/docker-data/mysql:/var/lib/mysql
+      - ./database/docker-data/mysql/8.0:/var/lib/mysql
+      - ./docker/mysql:/etc/mysql/conf.d
       - ./database/:/docker-entrypoint-initdb.d/
     networks:
       - network-grancursos
